set03/problem01_debug.txt
(base) hampana@Hampana set03 % gcc problem01.c
problem01.c:31:32: error: too few arguments to function call, expected 2, have 1
    distance = sqrt(pow(x2-x1/2) + pow(y2-y1/2));
                    ~~~        ^
problem01.c:31:47: error: too few arguments to function call, expected 2, have 1
    distance = sqrt(pow(x2-x1/2) + pow(y2-y1/2));
                                   ~~~        ^
2 errors generated.
(base) hampana@Hampana set03 % gcc problem01.c -o problem01
(base) hampana@Hampana set03 % gcc -g -O0 problem01.c -o problem01.exe
(base) hampana@Hampana set03 % lldb ./problem01
(lldb) target create "./problem01"
Current executable set to '/Users/hampana/Documents/c-activity-sets-hampana/set03/problem01' (arm64).
(lldb) r
Process 82624 launched: '/Users/hampana/Documents/c-activity-sets-hampana/set03/problem01' (arm64)
Enter the first x-cordinate:
2
Enter the second x-cordinate:
4
Enter the first y-cordinate:
2
Enter the second y-cordinate:
5
distance between teh pionts A(2.000000,4.000000) and B(2.000000,5.000000) is 3.605551Process 82624 exited with status = 0 (0x00000000) 
(lldb) log enable lldb default -f problem01.log
(lldb) b main
Breakpoint 1: where = problem01`main, address = 0x0000000100003cbc
(lldb) r
Process 82667 launched: '/Users/hampana/Documents/c-activity-sets-hampana/set03/problem01' (arm64)
Process 82667 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = breakpoint 1.1
    frame #0: 0x0000000100003cbc problem01`main
problem01`main:
->  0x100003cbc <+0>:  sub    sp, sp, #0x30
    0x100003cc0 <+4>:  stp    x29, x30, [sp, #0x20]
    0x100003cc4 <+8>:  add    x29, sp, #0x20
    0x100003cc8 <+12>: mov    w8, #0x0
Target 0: (problem01) stopped.
(lldb) s
Process 82667 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = instruction step into
    frame #0: 0x0000000100003cc0 problem01`main + 4
problem01`main:
->  0x100003cc0 <+4>:  stp    x29, x30, [sp, #0x20]
    0x100003cc4 <+8>:  add    x29, sp, #0x20
    0x100003cc8 <+12>: mov    w8, #0x0
    0x100003ccc <+16>: str    w8, [sp, #0x4]
Target 0: (problem01) stopped.
(lldb) s
Process 82667 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = instruction step into
    frame #0: 0x0000000100003cc4 problem01`main + 8
problem01`main:
->  0x100003cc4 <+8>:  add    x29, sp, #0x20
    0x100003cc8 <+12>: mov    w8, #0x0
    0x100003ccc <+16>: str    w8, [sp, #0x4]
    0x100003cd0 <+20>: stur   wzr, [x29, #-0x4]
Target 0: (problem01) stopped.
(lldb) s
Process 82667 stopped
* thread #1, queue = 'com.apple.main-thread', stop reason = instruction step into
    frame #0: 0x0000000100003cc8 problem01`main + 12
problem01`main:
->  0x100003cc8 <+12>: mov    w8, #0x0
    0x100003ccc <+16>: str    w8, [sp, #0x4]
    0x100003cd0 <+20>: stur   wzr, [x29, #-0x4]
    0x100003cd4 <+24>: sub    x0, x29, #0x8
Target 0: (problem01) stopped.
(lldb) q
Quitting LLDB will kill one or more processes. Do you really want to proceed: [Y/n] y